Update navbar dropdown color

--- a/lessons.html
+++ b/lessons.html
@@ -27,10 +27,10 @@
                         <a class="nav-link active dropdown-toggle" aria-current="page" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Lessons
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Lesson 1</a></li>
-                            <li><a class="dropdown-item" href="#">Lesson 2</a></li>
-                            <li><a class="dropdown-item" href="#">Lesson 3</a></li>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Unit 1</a></li>
+                            <li><a class="dropdown-item" href="#">Unit 2</a></li>
+                            <li><a class="dropdown-item" href="#">Unit 3</a></li>
                         </ul>
                     </li>
                 </ul>
