--- a/syntax.html
+++ b/syntax.html
@@ -6,31 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <link href="prism/prism.css" rel="stylesheet">
     <title>Syntax Reference</title>
     <style>
         body {
             background-color: #333;
             color: white;
         }
-        h1 {
+        h2 {
             margin-bottom: 1rem;
             text-decoration: underline;
         }
-        pre, code {
+        /* pre, code {
             background-color: #111;
             font-size: 12pt;
             padding-left: 2rem;
             padding-right: 2rem;
-        }
+        } */
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Printing</h1>
-        <pre class="rounded"><code>
-print("Hello, world!")
-print(3 + 2)
-        </code></pre>
+        <h2>Printing</h2>
+        <pre class="rounded language-python"><code><!--
+         -->print("Hello, world!")
+<!--     -->print(3 + 2)<!--
+     --></code></pre>
     </div>
+    
+    <script src="prism/prism.js"></script>
 </body>
 </html>
