Restyle accordion using custom Sass

--- a/lessons.html
+++ b/lessons.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-        <script src="boostrap/js/bootstrap.bundle.min.js"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="bootstrap/compiled/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="bootstrap/compiled/js/bootstrap.bundle.min.js"></script>
+        <link href="css/lessons.css" rel="stylesheet" />
         <title>Robotics</title>
         <style>
-            body {
+            /* body {
                 background-color: #333;
                 color: white;
-            }
+            } */
             h1 {
                 text-decoration: underline;
                 padding-top: 2rem;
