--- a/lessons.html
+++ b/lessons.html
@@ -16,6 +16,7 @@
             h1 {
                 text-decoration: underline;
                 padding-top: 2rem;
+                padding-bottom: 1rem;
             }
             .navbar {
                 background-color: #111;
@@ -61,7 +62,7 @@
                                 Accordion Item #1
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <strong>This is the first item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                             </div>
