--- a/lessons.html
+++ b/lessons.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="bootstrap/compiled/css/bootstrap.min.css" rel="stylesheet" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="bootstrap/compiled/css/bootstrap.min.css" rel="stylesheet">
         <script src="bootstrap/compiled/js/bootstrap.bundle.min.js"></script>
-        <link href="css/lessons.css" rel="stylesheet" />
-        <title>Robotics</title>
-        <style>
-            /* body {
-                background-color: #333;
-                color: white;
-            } */
-            h1 {
-                text-decoration: underline;
-                padding-top: 2rem;
-                padding-bottom: 1rem;
-            }
-            .navbar {
-                background-color: #111;
-            }
-        </style>
+        <link href="css/lessons.css" rel="stylesheet">
+        <title>Lessons</title>
     </head>
 
     <body>
