Migrate CSS in syntax.html to syntax.scss

--- a/syntax.html
+++ b/syntax.html
@@ -4,26 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="boostrap/js/bootstrap.bundle.min.js"></script>
+    <link href="bootstrap/compiled/css/bootstrap.min.css" rel="stylesheet">
+    <script src="bootstrap/compiled/js/bootstrap.bundle.min.js"></script>
     <link href="prism/prism.css" rel="stylesheet">
+    <link href="css/syntax.css" rel="stylesheet">
     <title>Syntax Reference</title>
-    <style>
-        body {
-            background-color: #333;
-            color: white;
-        }
-        h2 {
-            margin-bottom: 1rem;
-            text-decoration: underline;
-        }
-        /* pre, code {
-            background-color: #111;
-            font-size: 12pt;
-            padding-left: 2rem;
-            padding-right: 2rem;
-        } */
-    </style>
 </head>
 <body>
     <div class="container">
