Add navbar to syntax.html

--- a/syntax.html
+++ b/syntax.html
@@ -8,9 +8,37 @@
     <script src="bootstrap/compiled/js/bootstrap.bundle.min.js"></script>
     <link href="prism/prism.css" rel="stylesheet">
     <link href="css/syntax.css" rel="stylesheet">
+    <link href="css/navbar.css" rel="stylesheet">
     <title>Syntax Reference</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Computer Tech Python Course</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Syntax Reference</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Lessons </a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="lessons.html#unit-1">Unit 1</a></li>
+                            <li><a class="dropdown-item" href="lessons.html#unit-2">Unit 2</a></li>
+                            <li><a class="dropdown-item" href="lessons.html#unit-3">Unit 3</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
     <div class="container">
         <div id="printing">    
             <h2>Printing</h2>
