--- a/lessons.html
+++ b/lessons.html
@@ -7,6 +7,7 @@
         <link href="bootstrap/compiled/css/bootstrap.min.css" rel="stylesheet">
         <script src="bootstrap/compiled/js/bootstrap.bundle.min.js"></script>
         <link href="css/lessons.css" rel="stylesheet">
+        <link href="css/navbar.css" rel="stylesheet">
         <title>Lessons</title>
     </head>
 
@@ -20,10 +21,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Syntax Reference</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link active dropdown-toggle" aria-current="page" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Lessons </a>
@@ -32,6 +30,9 @@
                                 <li><a class="dropdown-item" href="#unit-2">Unit 2</a></li>
                                 <li><a class="dropdown-item" href="#unit-3">Unit 3</a></li>
                             </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="syntax.html">Syntax Reference</a>
                         </li>
                     </ul>
                 </div>
