--- a/syntax.html
+++ b/syntax.html
@@ -21,10 +21,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Syntax Reference</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Lessons </a>
@@ -33,6 +30,9 @@
                             <li><a class="dropdown-item" href="lessons.html#unit-2">Unit 2</a></li>
                             <li><a class="dropdown-item" href="lessons.html#unit-3">Unit 3</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="syntax.html">Syntax Reference</a>
                     </li>
                 </ul>
             </div>
