--- a/syntax.html
+++ b/syntax.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Lessons </a>
+                        <a class="nav-link dropdown-toggle" href="lessons.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Lessons </a>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="lessons.html#unit-1">Unit 1</a></li>
                             <li><a class="dropdown-item" href="lessons.html#unit-2">Unit 2</a></li>
