Add introduction header to homepage

--- a/index.html
+++ b/index.html
@@ -36,5 +36,14 @@
             </div>
         </div>
     </nav>
+
+    <div class="container-fluid text-center" id="jumbo-header">
+        <div class="container">
+            <h1>Welcome to Computer Tech</h1>
+            <h5>Learn the fundamentals of robotics using Python, the Lego EV3, and the CrowPi</h5>
+            <br>
+            <a class="btn btn-lg btn-success" href="lessons.html">Get started</a>
+        </div>
+    </div>
 </body>
 </html>
