--- a/syntax.html
+++ b/syntax.html
@@ -8,6 +8,10 @@
     <script src="bootstrap/compiled/js/bootstrap.bundle.min.js"></script>
     <link href="prism/prism.css" rel="stylesheet">
     <link href="css/syntax.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Syntax Reference</title>
 </head>
 <body>
