--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="bootstrap/compiled/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap/compiled/js/bootstrap.bundle.min.js"></script>
     <link href="css/index.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Computer Tech Python Course</title>
 </head>
 <body>
