Add project summary blurb

--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
     <div class="container-fluid text-center" id="jumbo-header">
         <div class="container">
             <h1>Welcome to Computer Tech</h1>
-            <h5>Learn the fundamentals of robotics using Python, the Lego EV3, and the CrowPi</h5>
+            <h5>Learn the fundamentals of robotics using Python, the LEGO EV3 robot, and the CrowPi</h5>
             <br>
             <a class="btn btn-lg btn-success" href="lessons.html">Get started</a>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Project Overview</h1>
+            </div>
+            <div class="col-md-8">
+                <p>
+                    This course was created by seniors in the Computer Technology program of the Chariho Career and Technical Center. Our ultimate goal was to create a programming course that taught the basics of Python using robotics materials such as the LEGO MINDSTORMS EV3 and CrowPi.
+                </p>
+            </div>
         </div>
     </div>
 </body>
