Add text for lesson 1.1

--- a/lessons.html
+++ b/lessons.html
@@ -46,12 +46,29 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Accordion Item #1
+                                Lesson 1
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                <p><strong>This is a placeholder for a video.</strong><p>
+                                <p>This is an overview of which Python elements this course will cover.</p>
+                                <ul>
+                                    <li>Printing</li>
+                                    <li>Variables</li>
+                                    <li>Data types</li>
+                                    <li>Lists</li>
+                                    <li>Functions</li>
+                                    <li>Importing modules</li>
+                                    <li>Comparison operators</li>
+                                    <li>If statements</li>
+                                    <li>If/else statements</li>
+                                    <li>While loops</li>
+                                    <li>For loops</li>
+                                    <li>Scope</li>
+                                    <li>Objects</li>
+                                    <li>Classes</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
