Add one card for each quarter to timeline

--- a/index.html
+++ b/index.html
@@ -61,6 +61,36 @@
                 </p>
             </div>
         </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="timeline">
+            <div class="col">
+                <div class="card" id="q1">
+                    <div class="card-body">
+                        <h3 class="card-title">Q1</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" id="q2">
+                    <div class="card-body">
+                        <h3 class="card-title">Q2</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" id="q3">
+                    <div class="card-body">
+                        <h3 class="card-title">Q3</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" id="q4">
+                    <div class="card-body">
+                        <h3 class="card-title">Q4</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
