Add modal pop-ups to each of the timeline cards

--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
                 <div class="card" id="q1">
                     <div class="card-body">
                         <h3 class="card-title">Q1</h3>
+                        <a href="#" class="stretched-link" data-bs-toggle="modal" data-bs-target="#q1Modal"></a>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="q1Modal" tabindex="-1" aria-labelledby="q1ModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content bg-dark">
+                            <div class="modal-header border-bottom-0">
+                                <h5 class="modal-title" id="q1ModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -73,6 +88,21 @@
                 <div class="card" id="q2">
                     <div class="card-body">
                         <h3 class="card-title">Q2</h3>
+                        <a href="#" class="stretched-link" data-bs-toggle="modal" data-bs-target="#q2Modal"></a>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="q2Modal" tabindex="-1" aria-labelledby="q2ModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content bg-dark">
+                            <div class="modal-header border-bottom-0">
+                                <h5 class="modal-title" id="q2ModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -80,6 +110,21 @@
                 <div class="card" id="q3">
                     <div class="card-body">
                         <h3 class="card-title">Q3</h3>
+                        <a href="#" class="stretched-link" data-bs-toggle="modal" data-bs-target="#q3Modal"></a>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="q3Modal" tabindex="-1" aria-labelledby="q3ModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content bg-dark">
+                            <div class="modal-header border-bottom-0">
+                                <h5 class="modal-title" id="q3ModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,6 +132,21 @@
                 <div class="card" id="q4">
                     <div class="card-body">
                         <h3 class="card-title">Q4</h3>
+                        <a href="#" class="stretched-link" data-bs-toggle="modal" data-bs-target="#q4Modal"></a>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="q4Modal" tabindex="-1" aria-labelledby="q4ModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content bg-dark">
+                            <div class="modal-header border-bottom-0">
+                                <h5 class="modal-title" id="q4ModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
