--- a/index.html
+++ b/index.html
@@ -152,5 +152,24 @@
             </div>
         </div>
     </div>
+
+    <script>
+        window.onload = function() {
+            randomizeBgImage("jumbo-header")
+        }
+
+        function randomizeBgImage(id) {
+            let element = document.getElementById(id);
+
+            let images = ["media/covers/cover-0.jpg",
+                          "media/covers/cover-1.jpg",
+                          "media/covers/cover-2.jpg",
+                          "media/covers/cover-3.jpg",
+                          "media/covers/cover-4.jpg"];
+
+            let randomIndex = Math.floor(Math.random() * images.length);
+            element.style.backgroundImage = `url(${images[randomIndex]})`;
+        }
+    </script>
 </body>
 </html>
