--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="timeline">
+        <div class="row row-cols-2 row-cols-lg-4" id="timeline">
             <div class="col">
                 <div class="card" id="q1">
                     <div class="card-body">
