--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </div>
 
     <div class="container">
+        <div class="section">
         <div class="row">
             <div class="col-md-4">
                 <h1>Project Overview</h1>
@@ -174,7 +175,9 @@
                 </div>
             </div>
         </div>
+        </div>
 
+        <div class="section">
         <div class="row">
             <h1>Our Team</h1>
         </div>
