--- a/lessons.html
+++ b/lessons.html
@@ -43,7 +43,11 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="margin-top: 2em;">
+        <div class="alert alert-warning" role="alert">
+            This page isn't quite finished yet, but be sure to check back in the future!
+        </div>
+        
         <div class="row">
             <h1 id="unit-1">Unit 1</h1>
             <div class="accordion" id="accordionExample">
